--- a/Css/style.css
+++ b/Css/style.css
@@ -419,8 +419,81 @@ footer .copyright {
   padding: 80px 0 30px 0;
 }
 
+/* FEATURES PAGE */
+#hero.features-header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.7)),
+    url(../Img/Banner2.jpg);
+}
+
+#features {
+  padding: 80px 0;
+}
+
+#features .features-title {
+  margin-bottom: 70px;
+  display: flex;
+  justify-content: space-between;
+}
+
+#features .features-title h1 {
+  font-size: 96px;
+  font-weight: 700;
+}
+
+#features .title h6 {
+  color: #fbbc05;
+  margin: 0;
+}
+
+#features .title p {
+  font-weight: 800;
+}
+
+#features .card {
+  background: #0a0a0a;
+  padding: 30px;
+  border: 1px solid #232020b1;
+  margin-right: -23px;
+}
+
+#features .card .card-index {
+  font-size: 14px;
+  font-weight: 700;
+}
+
+#features .card .card-title {
+  font-weight: 700;
+  margin-top: -8px;
+}
+
+#features .card .card-text {
+  margin-top: 25px;
+  font-size: 15px;
+}
+
+#features #card-right {
+  background: #fbbc05;
+  height: 213px;
+  border: none;
+}
+
+#features #card-right ul {
+  list-style: none;
+}
+
+#features #card-right ul li i {
+  margin-right: 10px;
+}
+
+/* CASE STUDIES PAGE */
+#hero.case-header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.7)),
+    url(../Img/Banner4.jpg);
+}
+
 /* MEDIA QUERIES */
 @media (max-width: 799px) {
+  /* This is the media query for the "HomePage" */
   /* HOME-PAGE */
   #navbar {
     display: flex;
@@ -537,7 +610,6 @@ footer .copyright {
   }
 
   /* gallery */
-
   #gallery .row {
     display: flex;
   }
@@ -581,5 +653,20 @@ footer .copyright {
   footer .copyright {
     justify-content: center;
     text-align: center;
+  }
+
+  /* This is the media query for the "What we do Page" */
+  /* FEATURES PAGE */
+  #features .features-title h1 {
+    font-size: 36px;
+  }
+
+  #features .card {
+    width: 100%;
+    height: 100%;
+  }
+
+  #features #card-right {
+    height: 100%;
   }
 }
