--- a/Css/style.css
+++ b/Css/style.css
@@ -277,6 +277,12 @@ button.normal {
   width: 100%;
   height: auto;
   transition: ease-in 0.3s;
+  opacity: 0.4;
+  cursor: pointer;
+}
+
+.photo img:hover {
+  opacity: 0.8;
 }
 
 /* feat */
@@ -542,16 +548,37 @@ footer .copyright {
   margin-left: -20px;
 }
 
-#case #card1:hover,
-#case #card2:hover,
-#case #card3:hover,
-#case #card4:hover {
+#case #card1:hover {
   opacity: 0.9;
   background-image: linear-gradient(
       rgba(251, 188, 5, 0.6),
       rgba(251, 188, 5, 0.6)
     ),
     url(../Img/Banner1.jpg);
+}
+#case #card2:hover {
+  opacity: 0.9;
+  background-image: linear-gradient(
+      rgba(251, 188, 5, 0.6),
+      rgba(251, 188, 5, 0.6)
+    ),
+    url(../Img/Banner3.jpg);
+}
+#case #card3:hover {
+  opacity: 0.9;
+  background-image: linear-gradient(
+      rgba(251, 188, 5, 0.6),
+      rgba(251, 188, 5, 0.6)
+    ),
+    url(../Img/Banner4.jpg);
+}
+#case #card4:hover {
+  opacity: 0.9;
+  background-image: linear-gradient(
+      rgba(251, 188, 5, 0.6),
+      rgba(251, 188, 5, 0.6)
+    ),
+    url(../Img/Banner5.jpg);
 }
 
 #case .card .card-body {
@@ -585,6 +612,165 @@ footer .copyright {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+/* ABOUT PAGE */
+#hero.about-header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.7)),
+    url(../Img/Banner3.jpg);
+}
+
+#team {
+  padding: 80px 0;
+}
+
+#team .team-title {
+  margin-bottom: 70px;
+  display: flex;
+  justify-content: space-between;
+}
+
+#team .team-title h1 {
+  font-size: 96px;
+  font-weight: 700;
+}
+
+#team .header h6 {
+  color: #fbbc05;
+  margin: 0;
+}
+
+#team .header p {
+  font-weight: 800;
+}
+
+#team .card {
+  background: #0a0a0a;
+  padding: 0;
+  border: 1px solid #232020b1;
+}
+
+#team .card .card-body {
+  padding: 15px 0;
+}
+
+#team .card .card-title {
+  font-weight: 700;
+  margin: 0;
+}
+
+#team .card .card-text {
+  font-size: 15px;
+}
+
+#team .card img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+/* CONTACT US PAGE */
+#hero.contact-header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.7)),
+    url(../Img/Banner5.jpg);
+}
+
+/* Style inputs with type="text", select elements and textareas */
+input[type="text"],
+select,
+textarea {
+  width: 100%; /* Full width */
+  padding: 16px; /* Some padding */
+  border: none;
+  /* border-radius: 4px; Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) */
+  background-color: #f4f2f2;
+  font-size: 13px;
+  color: #000;
+}
+
+#feat .names {
+  display: flex;
+  gap: 10px;
+}
+
+#feat .subscript {
+  display: flex;
+  gap: 230px;
+  margin-top: -15px;
+}
+
+#feat .subscript p {
+  font-size: 12px;
+  font-weight: 500;
+}
+
+#feat form span {
+  color: red;
+}
+/* Style the submit button with a specific background color etc */
+input[type="submit"] {
+  background-color: #fbbc05;
+  color: white;
+  padding: 15px 40px;
+  text-transform: uppercase;
+  border: none;
+  cursor: pointer;
+  margin: 20px 0;
+  font-size: 16px;
+  font-weight: bold;
+  transition: 0.4s ease;
+}
+
+/* When moving the mouse over the submit button, add a white color */
+input[type="submit"]:hover {
+  background-color: #fff;
+  color: #000;
+}
+
+/* Add a background color and some padding around the form */
+form {
+  background-color: #000;
+  padding: 20px;
+}
+
+#feat .contact-info {
+  padding: 40px 0 35px 70px;
+  width: 100%;
+}
+
+#feat .contact-header h4 {
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 40px;
+}
+
+#feat .contact-header::after {
+  content: "";
+  width: 4%;
+  height: 5px;
+  background: #fff;
+  position: absolute;
+}
+
+#feat .contact-lines {
+  margin-top: 70px;
+  margin-left: -32px;
+}
+
+#feat .contact-lines ul {
+  list-style: none;
+}
+
+#feat .contact-lines ul li {
+  padding: 10px 0;
+}
+
+#feat .contact-lines ul li i {
+  padding-right: 10px;
 }
 
 /* MEDIA QUERIES */
@@ -689,7 +875,8 @@ footer .copyright {
   #gallery .gallery-title h1,
   #feat .feat-title h1,
   #clients .clients-title h1,
-  #features .features-title h1 {
+  #features .features-title h1,
+  #team .team-title h1 {
     font-size: 36px;
   }
 
@@ -769,7 +956,7 @@ footer .copyright {
     height: 100%;
   }
 
-  /* This is the media query for the "What we do Page" */
+  /* This is the media query for the "Case Page" */
   /* CASE PAGE */
   #case .case-title h1 {
     font-size: 36px;
@@ -795,5 +982,26 @@ footer .copyright {
   #case .case-logo img {
     max-width: 50%;
     max-height: 50%;
+  }
+
+  /* This is the media query for the "Contact-us Page" */
+  /* CONTACT US PAGE */
+
+  #feat .subscript {
+    gap: 160px;
+  }
+
+  #feat .contact-info {
+    padding: 40px 0 25px 11px;
+  }
+
+  #feat .contact-header h4 {
+    font-size: 17px;
+    font-weight: 700;
+    margin-bottom: 40px;
+  }
+
+  #feat .contact-header::after {
+    width: 9%;
   }
 }
