--- a/Css/style.css
+++ b/Css/style.css
@@ -118,7 +118,7 @@ button.normal {
 
 #services .card {
   height: 80vh;
-  padding: 30px;
+  padding: 20px;
   background: #0a0a0a;
   border: 1px solid #232020b1;
 }
@@ -128,14 +128,8 @@ button.normal {
 }
 
 #services .card-title {
-  font-size: 35px;
+  font-size: 24px;
   font-weight: 700;
-}
-
-#services .card-sub-title {
-  font-size: 18px;
-  font-weight: 700;
-  margin: 20px 0 30px;
 }
 
 #services .card-title::after {
@@ -144,13 +138,19 @@ button.normal {
   height: 5px;
   background: #fff;
   position: absolute;
-  top: 230px;
-  left: 45px;
+  top: 140px;
+  left: 36px;
+}
+
+#services .card-body ul {
+  list-style: circle;
 }
 
 #services .card-text {
   font-size: 15px;
-  margin: 90px 0 30px;
+  margin: 90px 0 0 0;
+  width: 100%;
+  padding: 0;
 }
 
 /* about-us */
@@ -195,11 +195,12 @@ button.normal {
   background: #0a0a0a;
   padding: 30px;
   border: 1px solid #232020b1;
-  margin-right: -30px;
+  margin-right: -22px;
+  height: 279px;
 }
 
 #about-us #card {
-  margin-left: -30px;
+  margin-left: -22px;
 }
 
 #about-us .card .card-index {
@@ -219,7 +220,8 @@ button.normal {
 
 #about-us .about-img img {
   width: 100%;
-  height: 235px;
+  height: 279px;
+  object-fit: cover;
 }
 
 /* gallery */
@@ -887,11 +889,11 @@ form {
   }
 
   #about-us .card {
-    margin-right: 5px;
+    padding: 18px;
   }
 
   #about-us #card {
-    margin: 0;
+    margin-top: 0;
   }
 
   #about-us .about-img img {
